[projects] Add old projects

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="year">
   <y-project
     name="miam"
-    tags="game,ludum dare,rust,bevy"
+    tags="game,game jam,ludum dare,rust,bevy"
     description="miam is a burger game made for the LD51 game jam."
     links="play;https://yopox.itch.io/miam
     ;;submission page;https://ldjam.com/events/ludum-dare/51/miam
@@ -57,7 +57,7 @@
 <div class="year">
   <y-project
     name="Unbalanced Brawl"
-    tags="game,ludum dare,rust,bevy"
+    tags="game,game jam,ludum dare,rust,bevy"
     description="Unbalanced Brawl is an autochess made for the LD49 game jam."
     links="play;https://yopox.itch.io/unbalanced-brawl
     ;;submission page;https://ldjam.com/events/ludum-dare/49/unbalanced-brawl
@@ -78,10 +78,9 @@
 
   <y-project
     name="Infinite Racer"
-    tags="game,ludum dare,libGDX,kotlin"
+    tags="game,game jam,ludum dare,libGDX,kotlin"
     description="Infinite Racer is a racing game made for the LD47 game jam."
-    links="play (broken);
-    ;;submission page;https://ldjam.com/events/ludum-dare/47/infinite-racer
+    links="submission page;https://ldjam.com/events/ludum-dare/47/infinite-racer
     ;;github;https://www.github.com/yopox/LD47"
   ></y-project>
 
@@ -90,23 +89,88 @@
 </div>
 
 <div class="year">
+  <y-project
+    name="Slave Odyssey"
+    tags="game,game jam,ludum dare,phaser,javascript"
+    description="Slave Odyssey is a shoot 'em up made for the LD44 game jam."
+    links="submission page;https://ldjam.com/events/ludum-dare/44/infinite-racer
+    ;;github;https://www.github.com/yopox/LD44"
+  ></y-project>
+
   <div class="background"></div>
   <div class="strong abs">2019</div>
 </div>
 
 <div class="year">
+  <y-project
+    name="Sacriflag"
+    tags="game,game jam,ludum dare,phaser,javascript"
+    description="Sacriflag is a puzzle game made for the LD43 game jam."
+    links="submission page;https://ldjam.com/events/ludum-dare/43/sacriflag
+    ;;github;https://www.github.com/yopox/LD43"
+  ></y-project>
+
+  <y-project
+    name="Campagne"
+    tags="game,game jam,gbjam,libGDX,kotlin"
+    description="Campagne is a city builder game made for the GBJAM 6 game jam."
+    links="itch.io;https://yopox.itch.io/campagne
+  ;;github;https://www.github.com/yopox/GBJAM6"
+  ></y-project>
+
   <div class="background"></div>
   <div class="strong abs">2018</div>
 </div>
 
 <div class="year">
+  <y-project
+    name="uRUNium"
+    tags="game,game jam,ludum dare,phaser,javascript"
+    description="uRUNium is a platformer game made for the LD39 game jam."
+    links="submission page;https://ldjam.com/events/ludum-dare/39/urunium
+    ;;github;https://www.github.com/yopox/LD39"
+  ></y-project>
+
   <div class="background"></div>
   <div class="strong abs">2017</div>
 </div>
 
 <div class="year">
+  <y-project
+    name="Be THE Monster"
+    tags="game,game jam,ludum dare,phaser,javascript"
+    description="Be THE Monster is a fighting game made for the LD30 game jam."
+    links="github;https://www.github.com/yopox/LD30"
+  ></y-project>
+
   <div class="background"></div>
-  <div class="strong abs">2016</div>
+  <div class="strong abs">2015</div>
+</div>
+
+<div class="year">
+  <y-project
+    name="Gods Tactics"
+    tags="game,game jam,ludum dare,javascript"
+    description="Gods Tactics is a strategy game made for the LD30 game jam."
+    links=""
+  ></y-project>
+
+  <y-project
+    name="Super Scroll Bros"
+    tags="game,game jam,ludum dare,javascript"
+    description="Super Scroll Bros is a platformer game made for the LD29 game jam."
+    links=""
+  ></y-project>
+
+  <y-project
+    name="Non Human Arena"
+    tags="game,game jam,mini ludum dare,javascript"
+    description="Non Human Arena is a roguelike game made for the MiniLD49 game jam."
+    links=""
+  ></y-project>
+
+  <div class="background"></div>
+  <div class="strong abs">2014</div>
 </div>
 </body>
 <script>
