--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>yopox</title>
-  <script src="./node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <script src="./node_modules/lit/polyfill-support.js"></script>
-  <script type="module" src="y-project.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <script type="module" src="/portfolio/y-project.js"></script>
+  <link rel="stylesheet" href="/portfolio/style.css">
 </head>
 <body>
 <header>
