[style] Responsive design

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content= "width=device-width, initial-scale=1.0">
   <title>yopox</title>
   <script type="module" src="/portfolio/y-project.js"></script>
   <link rel="stylesheet" href="/portfolio/style.css">
