[index] Add links

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
 <header>
   <div id="title">yopox</div>
-  <span>software developer @ JetBrains</span>
-  <span>hobbyist game dev</span>
+  <div>software developer @ JetBrains</div>
+  <div>hobbyist game dev</div>
+  <div><a rel="me" href="https://mstdn.social/@yopox">—mastodon—</a></div>
+  <div><a href="https://github.com/yopox">—github—</a></div>
+  <div><a href="https://twitch.tv/yopox">—twitch—</a></div>
 </header>
 
 <div class="year">
