[index] Add mmf4 link

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <y-project
     name="Morsay Mad Festival 2022"
     tags="youtube,audio,ytpmv,ableton"
+    links="youtube;https://www.youtube.com/watch?v=O_vmI7w3-oo"
     description="Cover of Free Money from the game Pikuniku.
               One part of the third MMF YTPMV collaboration."
   ></y-project>
