[index] Add mad veggies

--- a/index.html
+++ b/index.html
@@ -20,10 +20,24 @@
 
 <div class="year">
   <y-project
+    name="mad veggies"
+    tags="game,game jam,ludum dare,rust,bevy"
+    description="mad veggies is a puzzle game made for the LD52 game jam."
+    links="play;https://yopox.itch.io/LD52
+    ;;submission page;https://ldjam.com/events/ludum-dare/52/mad-veggies
+    ;;github;https://www.github.com/yopox/LD52"
+  ></y-project>
+
+  <div class="background"></div>
+  <div class="strong abs">2023</div>
+</div>
+
+<div class="year">
+  <y-project
     name="miam"
     tags="game,game jam,ludum dare,rust,bevy"
     description="miam is a burger game made for the LD51 game jam."
-    links="play;https://yopox.itch.io/miam
+    links="play;https://yopox.itch.io/mad-veggies
     ;;submission page;https://ldjam.com/events/ludum-dare/51/miam
     ;;github;https://www.github.com/yopox/LD51"
   ></y-project>
