[index] Fix mad veggies itch.io link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     name="mad veggies"
     tags="game,game jam,ludum dare,rust,bevy"
     description="mad veggies is a puzzle game made for the LD52 game jam."
-    links="play;https://yopox.itch.io/LD52
+    links="play;https://yopox.itch.io/mad-veggies
     ;;submission page;https://ldjam.com/events/ludum-dare/52/mad-veggies
     ;;github;https://www.github.com/yopox/LD52"
   ></y-project>
